--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="all_comments">All Comments</string>
+    <string name="edit_photo">Edit photo</string>
+    <string name="add_your_fun_one">Add your FunOne</string>
 
 </resources>
