--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,11 @@
     <string name="google">Google</string>
     <string name="vk">VKontakte</string>
 
-    <!--SearchActivity-->
+    <!--Search-->
     <string name="search">Search</string>
+    <string name="fun_search_hint">FunOne search</string>
+
+
     <string name="settings">Settings</string>
 
     <string name="title_activity_all_coments">AllComentsActivity</string>
