--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,8 @@
     <string name="all_comments">All Comments</string>
     <string name="edit_photo">Edit photo</string>
     <string name="add_your_fun_one">Add your FunOne</string>
+    <string name="linked_posts">Linked posts</string>
+    <string name="my_posts">My posts</string>
+    <string name="linked_profile_empty">Here you find your posts!</string>
 
 </resources>
