--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <!--SocialLoginActivity-->
     <string name="log_in">Log In</string>
-    <string name="best_comments">Best comments</string>
+
     <string name="com_facebook_loginview_log_out_button">Facebook</string>
     <string name="join_and_have_fun">Join us and have more fun</string>
     <string name="terms_privacy_policy">Terms of Service and Private Police</string>
@@ -18,6 +18,9 @@
     <string name="fun_search_hint">FunOne search</string>
     <string name="popular_hash_tag">Popular hashtag</string>
 
+
+    <!--BestCommentsActivity-->
+    <string name="best_comments">Best comments</string>
 
     <string name="settings">Settings</string>
 
@@ -32,5 +35,8 @@
     <string name="linked_profile_empty">Here you find your posts!</string>
     <string name="liked_profile_empty">Here you find liked posts!</string>
     <string name="my_posts_empty">Here you find your posts!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
