added sliding up panel for sharing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@
     <string name="fun_search_hint">FunOne search</string>
     <string name="popular_hash_tag">Popular hashtag</string>
 
+    <!--SHARE-->
+    <string name="share">Share…</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
 
     <!--BestCommentsActivity-->
     <string name="best_comments">Best comments</string>
