--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
 
     <!--ERRORS-->
     <string name="err_log_in">Error has occurred while logging in with </string>
+    <string name="err_could_not_open_gallery">Could not open Gallery</string>
 
     <!--CAMERA-->
     <string name="add_photo">Add photo</string>
